# ITRSimulation

./: CMakeLists.txt  DataTable.h  FillUpA.h  FillUpA_Case1.h  FillUpX.h  FillUpY.h  FillUpY_Case1.cpp  FillUpY_Case1.h  Readme.txt  SimulateData.cpp  SimulateData.h  itr_sim_engine.py
CPP/: DataTable.cpp  FillUpA.cpp  FillUpA_Case1.cpp  FillUpX.cpp  FillUpX_Case1.cpp  FillUpX_Case1.h  FillUpY.cpp  main.cpp
ITRSimEng_py/: ITRSimpy.py  Learning+Optimal+Personalized+Treatment+Rules_simulation+setting+2.py  PersonalizedRecommendationSimulation.tex  README  case1.py  case2_1.py  case2_2.py  case2_3.py  case2_4.py  case3_1.py  case3_2.py  case_cpp.py  checkboard_3*3.py  donut.py  itr_sim_engine.py  ref_simulation.bib  x10t2y1_circle_linear.py  x10t2y1_cox_circle.py  x10t2y1_dichotomous_linear.py  x10t2y1_plane_linear.py  x10t3y1_linear_circle.py  x10t3y1_linear_plane.py  x11t2y1_complex_logitA.py  x11t2y1_complex_logitD.py  x11t2y1_complex_logitF.py  x11t3y10_longitudinal_log.py  x1t8y3_Q_survival.py  x2t0y1_spiral_linear.py  x2t2y1_spiral_linear.py  x3t2y1_torus_linear1.py  x4t2y1_checkboard_linear.py  x4t2y1_dichotomous_linear1.py  x4t2y1_dichotomous_linear2.py  x4t2y1_discrete_linearB.py  x4t2y1_discrete_linearD.py  x4t2y1_discrete_linearE.py  x4t2y1_discrete_linearF.py  x5t2y1_dichotomous_linear1.py
LaTex/: PersonalizedRecommendationSimulation.aux  PersonalizedRecommendationSimulation.blg  PersonalizedRecommendationSimulation.pdfsync  PersonalizedRecommendationSimulation.tex  ref_simulation.bib
RSim/: ITRFit.R  SimpleSimulation.R
Slides/: ITREval_MoreDetails.tex  (+3 more)
